Only show edit form to partners or supporters

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -107,4 +107,4 @@
   </div>
 <% end %>
 
-<%= render(:partial => 'badge_form') %>
+<%= render(:partial => 'badge_form') if ['partner', 'supporter'].include?(@member.product_name) %>
