Tweak embed text

--- a/app/views/members/_badge_form.html.erb
+++ b/app/views/members/_badge_form.html.erb
@@ -4,9 +4,9 @@
 
   <p class='alert alert-info'>
     Tell the world about your ODI membership! Simply select the display options
-    from the options below, and then copy the generated code from the box below
-    and paste it into your website's footer, or give it to your website manager
-    (if you don't have access to the website)
+    from the options below, and then use the generated code to add the badge to
+    your site (or give it to your website manager if you don't have access to
+    the website)
   </p>
 
   <div class="control-group">
