--- a/app/assets/stylesheets/badge.css.scss
+++ b/app/assets/stylesheets/badge.css.scss
@@ -4,6 +4,16 @@
 
   $levels: partner, supporter;
   $sizes: large, mini, standard;
+  $colourNames: black, blue, red, crimson, orange, green, pomegranate, grey;
+  $colours: #000, #00b7ff, #ff6700, #d30102, #f99C06, #0DBC37, #dc4810, #aaa;
+
+  @for $i from 1 through length($colourNames) {
+    &.#{nth($colourNames, $i)} {
+      ul.details li {
+        background-color: #{nth($colours, $i)};
+      }
+    }
+  }
 
   @for $i from 1 through length($levels) {
     &.odi-#{nth($levels, $i)} {
@@ -44,7 +54,6 @@
       white-space: nowrap;
       overflow: hidden;
       color: #fff;
-      background-color: #000;
 
       span {
         display: inline-block;
