--- a/app/views/members/_badge_form.html.erb
+++ b/app/views/members/_badge_form.html.erb
@@ -35,6 +35,18 @@
     <% end %>
   </div>
 
+  <div class="control-group">
+    <label class="control-label" for="colour">Badge colour</label>
+    <div class="controls">
+      <% ['black', 'blue', 'red', 'crimson', 'orange', 'green', 'pomegranate', 'grey'].each do |colour| %>
+        <label class="radio inline">
+          <%= radio_button_tag("colour", colour, colour == 'standard', class: "colour") %>
+          <%= colour.titleize %>
+        </label>
+      <% end %>
+    </div>
+  </div>
+
   <div class="row-fluid">
     <div class="span6">
       <h3>Code</h3>
@@ -82,14 +94,15 @@
       });
 
 
-      $('.size, .align').click(function() {
+      $('.size, .align, .colour').click(function() {
         url = "<%= badge_member_url(@member, format: :js) %>"
 
         $('#mini_align, #standard_align').addClass('hidden');
 
         params = {
             size: $('.size:checked')[0].value,
-            align: $('.align:checked')[0].value
+            align: $('.align:checked')[0].value,
+            colour: $('.colour:checked')[0].value
         }
 
         if (params["size"] == "mini") {
@@ -106,7 +119,7 @@
           }
         }
 
-        $('#preview .odi-badge').attr('class', 'odi-badge odi-<%= @member.product_name %> ' + params["size"] + ' ' + params["align"])
+        $('#preview .odi-badge').attr('class', 'odi-badge odi-<%= @member.product_name %> ' + params["size"] + ' ' + params["align"] + ' ' + params["colour"] )
 
         url = url + "?" + jQuery.param(params)
         $('#code').val("<script src=\""+ url +"\" type=\"text/javascript\"><\/script>")
