--- a/app/assets/stylesheets/badge.css.scss
+++ b/app/assets/stylesheets/badge.css.scss
@@ -4,7 +4,7 @@
 
   $levels: partner, supporter;
   $sizes: large, mini, standard;
-  $colourNames: black, blue, red, crimson, orange, green, pomegranate, grey;
+  $colourNames: 'black', 'blue', 'red', 'crimson', 'orange', 'green', 'pomegranate', 'grey';
   $colours: #000, #00b7ff, #ff6700, #d30102, #f99C06, #0DBC37, #dc4810, #aaa;
 
   @for $i from 1 through length($colourNames) {
