Make Founding partner title case

--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -9,7 +9,7 @@
     <% end %>
 
     <p>
-      <span class="label <%= organization.member.product_name %>"><%= organization.member.product_name.capitalize %></span>
+      <span class="label <%= organization.member.product_name %>"><%= organization.member.product_name.titleize %></span>
     </p>
 
     <p>
