--- a/app/views/organizations/_summary.erb
+++ b/app/views/organizations/_summary.erb
@@ -4,14 +4,14 @@
        style='background-image: url(<%= organization.logo.rectangular.url %>)'>
   </div>
   <div class='organization-content'>
-    <h2 property="name"><%= link_to organization.name, organization.member %>  <span class="label <%= organization.member.product_name %>"><%= organization.member.product_name.capitalize %></span></h2>
+    <h2 property="name"><%= link_to organization.name, organization.member %>  <span class="label <%= organization.member.product_name %>"><%= organization.member.product_name.titleize %></span></h2>
 
     <% if organization.cached_tagline.present? %>
       <p><strong><%= organization.cached_tagline %></strong></p>
     <% end %>
 
     <i class='icon icon-home'></i> <%= link_to organization.url, organization.url, :property => "url"%></a>
-    
+
     <div class='organization-description clearfix'>
       <p property="description"><%= organization_description(organization) %></p>
       <%= link_to "#{editable?(organization) ? "Edit" : "More"} information &raquo;".html_safe, organization.member, :class=>'btn pull-right' %>
