--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -28,9 +28,12 @@
     <%= f.label :organization_size, :class => 'control-label' %>
     <div class="controls">
       <%= f.select(:organization_size, {
-          "Please select"           => nil,
-          "Less than 250 employees" => "small",
-          "250 or more employees"   => "large"
+          "Please select"            => nil,
+          "less than 10 employees"   => '<10',
+          "10 - 50 employees"        => '10-50',
+          "51 - 250 employees"       => '51-250',
+          "251 - 1000 employees"     => '251-1000',
+          "more than 1000 employees" => '>1000'
         }) %>
       <span class="help-inline">(required)</span>
     </div>
