--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -50,6 +50,14 @@
   </div>
 
   <div class="control-group">
+    <%= f.label :organization_sector, :class => 'control-label'  %>
+    <div class="controls">
+      <%= f.select(:organization_sector, Member.sectors, prompt: "Please select") %>
+      <span class="help-inline">(required)</span>
+    </div>
+  </div>
+
+  <div class="control-group">
   	<%= f.label :telephone, :class => 'control-label' %>
   	<div class="controls">
   		<%= f.text_field :telephone %>
