Fix email signature

--- a/app/views/capsule_signup_mailer/confirmation.html.erb
+++ b/app/views/capsule_signup_mailer/confirmation.html.erb
@@ -17,7 +17,7 @@
 <p>Best wishes,</p>
 
 <p>
-  Stuart, Georgia, Carl and Andrea
+  Georgia, Carl, Andrea, Clara and Patrik
   <br/>
   The ODI Membership team
 </p>
