Make model responsible for deciding if it’s an organization

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -52,7 +52,7 @@
 
   </fieldset>
 
-  <% if ['partner', 'sponsor', 'supporter'].include?(@member.product_name) %>
+  <% if @member.organization? %>
     <fieldset>
       <legend>Badge</legend>
 
