Don’t show badge selection if founding partner
And clean up querying.

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -53,7 +53,7 @@
 
   </fieldset>
 
-  <% if @member.organization? %>
+  <% if @member.organization? && !@member.founding_partner? %>
     <fieldset>
       <legend>Badge</legend>
 
