--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,3 +1,5 @@
+<p class="muted">This directory lists organisations who are currently members of the ODI:</p>
+
 <% @organizations.each do |organization| %>
   <%= render :partial => 'organizations/summary', :locals => {:organization => organization}%>
 <% end %>
