--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -190,7 +190,7 @@
     <div class="control-group">
       <%= f.label :payment_frequency, :class => 'control-label' %>
       <div class="controls">
-        <%= f.select :payment_frequency, [["Yearly", :annual],["Monthly", :monthly]] %>
+        <%= f.select :payment_frequency, payment_frequency_options %>
       </div>
     </div>
 
