Individual supporter doesn’t get any colour choice

--- a/app/views/members/_badge_form.html.erb
+++ b/app/views/members/_badge_form.html.erb
@@ -38,7 +38,7 @@
         <div class="control-group">
           <label class="control-label" for="colour">Badge colour</label>
           <div class="controls">
-            <% ['black', 'grey', member_colour(@member)].each do |colour| %>
+            <% badge_colours(@member).each do |colour| %>
               <label class="radio inline">
                 <%= radio_button_tag("colour", colour, colour == 'black', class: "colour") %>
                 <%= colour.titleize %>
