Filter members by the first letter of organization name.
Or ‘#’ if the company starts with something other than a letter.

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,3 +1,12 @@
+<div class="pagination">
+  <ul>
+    <%= pagination_item(link_to('All', alpha: nil), @alpha.nil?) %>
+    <% @groups.each do |letter| %>
+      <%= pagination_item(link_to(letter, alpha: letter), letter == @alpha) %>
+    <% end %>
+  </ul>
+</div>
+
 <p class="muted">This directory lists organisations who are currently members of the ODI:</p>
 
 <% @organizations.each do |organization| %>
