Remove border around alpha group pagination

--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -53,3 +53,17 @@ span.contact-point-description {
 #organization-details input:required, #organization-details textarea:required {
 	background-color: #FFC;
 }
+
+.alpha-group.pagination {
+  ul {
+    box-shadow: none;
+  }
+
+  li > a {
+    border: none;
+  }
+
+  .active > a {
+    background: transparent;
+  }
+}
