--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,4 +1,4 @@
-<div class="pagination">
+<div class="alpha-group pagination">
   <ul>
     <%= pagination_item(link_to('All', alpha: nil), @alpha.nil?) %>
     <% @groups.each do |letter| %>
