A basic search form
Searches name of member and their description text.
Highlights search term in the description.

--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -67,3 +67,9 @@ span.contact-point-description {
     background: transparent;
   }
 }
+
+.organization mark {
+  font-weight: normal;
+  background: #e5e5e5;
+  color: inherit;
+}
