--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -94,7 +94,7 @@
   </fieldset>
 
   <div class="form-actions">
-    <%= f.submit "Sign up", :id => 'submit', :class => 'btn btn-primary btn-large' %>
+    <%= f.submit "Become an ODI member", :id => 'submit', :class => 'btn btn-primary btn-large' %>
     or <%= link_to "Sign in", new_session_path(resource_name) %>
   </div>
   
