--- a/app/views/members/_badge_form.html.erb
+++ b/app/views/members/_badge_form.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="badgeContent" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none">
+<div class="modal fade" id="badgeContent" tabindex="-1" role="dialog" aria-labelledby="badge-embed" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
 
