--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -56,7 +56,10 @@
     <fieldset>
       <legend>Badge</legend>
 
-      <p>Tell the world about your ODI membership. <a href="#badgeContent" data-toggle="modal">Display a badge</a> on your site.</p>
+      <p>
+        Tell the world about your ODI membership.
+        <a id="badge-embed" href="#badgeContent" data-toggle="modal">Display a badge</a> on your site.
+      </p>
 
       <%= render(:partial => 'badge_form') %>
     </fieldset>
