--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Members controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#badgeDownload .preview.well {
+  height: 200px;
+  text-align: center;
+
+  .image-padding {
+    height: 170px;
+    line-height: 170px;
+    margin: 0 auto 10px;
+    vertical-align: middle;
+  }
+}
