--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -58,10 +58,12 @@
 
       <p>
         Tell the world about your ODI membership.
-        <a id="badge-embed" href="#badgeContent" data-toggle="modal">Display a badge</a> on your site.
+        <a id="badge-embed" href="#badgeContent" data-toggle="modal">Display a badge</a> on your site or
+        <a id="badge-download" href="#badgeDownload" data-toggle="modal">download an image of your badge</a>.
       </p>
 
       <%= render(:partial => 'badge_form') %>
+      <%= render(:partial => 'badge_download') %>
     </fieldset>
   <% end %>
 
