--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,9 +1,9 @@
-<p class="muted">This directory lists organisations who are currently members of the ODI:</p>
-
-<form class="form-search">
-  <input type="text" name="q" value="<%= @search %>" class="input-medium search-query">
+<form class="form-search pull-right">
+  <input type="search" name="q" value="<%= @search %>" class="input-medium search-query">
   <button type="submit" class="btn">Search</button>
 </form>
+
+<p class="muted">This directory lists organisations who are currently members of the ODI:</p>
 
 <div class="alpha-group pagination">
   <ul>
