--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -97,7 +97,7 @@
   </fieldset>
 
   <div class="form-actions">
-    <%= f.submit "Become an ODI member", :id => 'submit', :class => 'btn btn-primary btn-large' %>
+    <%= f.submit (individual? ? "Pay now" : "Become an ODI member"), :id => 'submit', :class => 'btn btn-primary btn-large' %>
   </div>
 
 <% end %>
