--- a/app/views/capsule_signup_mailer/confirmation.html.erb
+++ b/app/views/capsule_signup_mailer/confirmation.html.erb
@@ -1,6 +1,6 @@
 <p><%= greeting(@member) %>,</p>
 
-<p>We are delighted to have you join the Open Data Institute membership community. Thank you for supporting us!</p>
+<p>We are delighted to have you join the Open Data Institute member network. Thank you for supporting us!</p>
 
 <p>- Your membership number is <strong><%= @member.membership_number %></strong>.</p>
 
@@ -8,7 +8,9 @@
 
 <p>- We are drawing up your invoice and it will be sent to you shortly.</p>
 
-<p>- You will receive our monthly membership newsletter (let us know if you want to add any colleagues to the mailing list) and invites to the bi-annual ODI Connect member networking events and the annual Summit.</p>
+<p>- You will soon receive your Welcome Pack to help you get started with your ODI membership and make the most of ODI communications.</p>
+
+<p>- You will receive our monthly membership newsletter (let us know if you want to add any colleagues to the mailing list) and invites to the quarterly ODI Connect member networking events and the annual Summit.</p>
 
 <p>We also run a free to attend lecture series every Friday highlighting some of the awe inspiring work going on using Open Data - everything from data as art, through to the CTO of the World Bank giving a 'fireside chat' about his experience at the White House. You can register for upcoming talks <a href="http://www.theodi.org/lunchtime-lectures">here</a>.</p>
 
@@ -17,15 +19,13 @@
 <p>Best wishes,</p>
 
 <p>
-  Stuart, Georgia, Carl and Andrea
+  Georgia, Carl, Andrea, Patrik and Clara
   <br/>
   The ODI Membership team
 </p>
 
 <p>
-  <%= mail_to 'stuart.coleman@theodi.org', 'Stuart Coleman' %> Commercial Director<br/>
-  <%= mail_to 'georgia.phillips@theodi.org', 'Georgia Phillips' %> For Partner / Sponsor queries<br/>
+  <%= mail_to 'andrea.cox@theodi.org', 'Andrea Cox' %> Andrea Cox For member network, events and newsletter<br/>
   <%= mail_to 'carl.rodrigues@theodi.org', 'Carl Rodrigues' %> For new Supporter queries<br/>
-  <%= mail_to 'andrea.cox@theodi.org', 'Andrea Cox' %> For membership community, events and newsletter<br/>
   <%= mail_to 'members@theodi.org', 'Membership' %> For general queries<br/>
 </p>
