--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -20,6 +20,22 @@
   		</div>
   	</div>
 
+    <% if @member.individual? %>
+        <div class="control-group">
+            <%= f.label :contact_name, :class => 'control-label' %>
+            <div class="controls">
+                <%= f.text_field :contact_name %>
+            </div>
+        </div>
+
+        <div class="control-group">
+            <%= f.label :telephone, :class => 'control-label' %>
+            <div class="controls">
+                <%= f.telephone_field :telephone %>
+            </div>
+        </div>
+    <% end %>
+
     <% if @member.pending_reconfirmation? %>
       <div>Currently waiting confirmation for: <%= @member.unconfirmed_email %></div>
     <% end %>
