--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -34,6 +34,13 @@
                 <%= f.telephone_field :telephone %>
             </div>
         </div>
+
+        <div class="control-group">
+            <%= f.label :address, :class => 'control-label' %>
+            <div class="controls">
+                <%= f.text_area :address, :rows => 5 %>
+            </div>
+        </div>
     <% end %>
 
     <% if @member.pending_reconfirmation? %>
