Only run the update on page load if it’s not first time
This leaves place holder text in place if someone were to read it before they enter the form.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -79,8 +79,10 @@
       $('#member_organization_company_number').change(function(e){
         $('#company-number').text(e.target.value);
       });
+      <% unless params[:action] == 'new' %>
       update_name();
       update_address();
+      <% end %>
     });
   </script>
 </div>
