Ensure individual agrees to data protection policy

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -92,6 +92,14 @@
         </label>
   	</div>
     <% if individual? %>
+    <hr class="heavy">
+
+    <h2>Data protection policy</h2>
+
+    <div id="data-protection" class="well">
+        <%= render :partial => 'data_protection_policy' %>
+    </div>
+
     <div class="control-group">
       <div class="controls">
   		  <label class='checkbox'>
