--- a/app/views/devise_mailer/_individual_confirmation.html.erb
+++ b/app/views/devise_mailer/_individual_confirmation.html.erb
@@ -2,38 +2,43 @@
 
 <p>We are delighted to welcome you to the Open Data Institute member community. As an ODI Supporter you join a unique group of individuals and organisations who share a deep interest in open data and its potential.</p>
 
-<p>Your membership number is <strong><%= @resource.membership_number %></strong>.</p>
+<p>As you share your perspectives, collaborate with your fellow members and support the ODI you will play a key role in helping us to achieve our mission to promote a sustainable open data culture around the world.</p>
 
-<p>To activate your account click <%= link_to 'here', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
+<ul>
+    <li>Your membership number is <strong><%= @resource.membership_number %></strong></li>
 
-<p>You will then be able to download an ODI Supporter badge which you can display on your website and on your print collateral.</p>
+    <li>To activate your account click <%= link_to 'here', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></li>
 
-<h3>Join the conversation on Twitter and LinkedIn</h3>
+    <li>You will then be able to download an ODI Supporter badge which you can display on your website and on your print collateral</li>
+</ul>
 
-<p>Connect with our global network of corporates, start-ups, universities and public sector organisations by joining the <%= link_to "LinkedIn members' group", "https://www.linkedin.com/groups?gid=5161407" %>. For real-time open data events and news follow the Twitter handles <%= link_to '@UKODImembers', 'https://twitter.com/UKODImembers' %> and <%= link_to '@UKODI', 'https://twitter.com/UKODI' %>.</p>
+<p>As an ODI Individual Supporter we hope you will also:</p>
 
-<h3>Keep up to date with your monthly e-newsletter</h3>
+<h3>Join the conversation</h3>
 
-<p>Look out for our monthly membership newsletter which you’ll receive on the third Friday of every month.</p>
+<p>Connect with our global network of corporates, startups, universities and public sector organisations by joining the <%= link_to "LinkedIn members' group", "https://www.linkedin.com/groups?gid=5161407" %>. For the latest on open data events and news follow <%= link_to '@UKODImembers', 'https://twitter.com/UKODImembers' %> and <%= link_to '@ODIHQ', 'https://twitter.com/ODIHQ' %> on Twitter.</p>
 
-<h3>Save 20% on all Open Data Institute public <%= link_to 'training courses', 'http://theodi.org/courses' %></h3>
+<h3>Stay ahead of the curve</h3>
 
-<p>Build skills and open data expertise through our range of courses.</p>
+<p>Sign up to our membership newsletter, which we’ll ping you on the third Friday of every month. You’ll also receive priority notification of ODI Summit discounts and selected access to other ODI events.</p>
 
-<h3>And also benefit from ODI offerings such as...</h3>
+<h3>Boost your skills</h3>
 
-<h4>Attend ODI events and lectures</h4>
+<p>As an ODI Supporter, you can claim an exclusive 20% discount on all Open Data Institute training. Whether you’re interested in law, business or finding stories in open data, browse our specialist <%= link_to 'public training courses', 'http://theodi.org/courses' %> and book your place by selecting an ‘ODI Member’ ticket on the course page.</p>
 
-<p>Come along or listen to the live-streaming of our <%= link_to 'open data lectures', 'http://theodi.org/lunchtime-lectures' %> every Friday lunchtime from 1pm highlighting some of the awe-inspiring work using open data. See what events are coming up at the ODI here: <%= link_to 'http://theodi.org/events', 'http://theodi.org/events' %>.</li>
+<h3>Get inspired</h3>
 
-<h4>Access the open data archive</h4>
+<p>The ODI holds free, <%= link_to 'Friday lunchtime lectures', 'http://theodi.org/lunchtime-lectures' %> every week that showcase the many ways that open data is changing the world. If you’re nearby, come along and bring your lunch, or if not you can tune into the live audio stream. If you’d like to suggest a speaker for one of our lectures, get in touch with the <%= link_to 'membership team', 'mailto:members@theodi.org' %>. You can find out what else we have coming up on our <%= link_to 'events page', 'http://theodi.org/events' %>.</p>
 
-<p>Browse <%= link_to 'case studies', 'http://theodi.org/case-studies' %>, technical <%= link_to 'open data guides', 'http://theodi.org/guides' %>, the ODI <%= link_to 'lecture archive', 'http://theodi.org/lunchtime-lectures' %> and the latest <%= link_to 'news', 'http://theodi.org/news' %> and <%= link_to 'video content', 'http://vimeo.com/theodiuk' %>.</p>
+<h3>Broaden your horizons</h3>
 
-<p>Your membership officially runs from <%= Date.today.to_formatted_s(:long_ordinal) %> to <%= (Date.today + 12.months).to_formatted_s(:long_ordinal) %>. We hope that you will enjoy the benefits of membership during this time and that you’ll remain with us for the years to come.</p>
+<p>If you want to learn more about open data, take a look at our <%= link_to 'case studies', 'http://theodi.org/case-studies' %>, technical open data <%= link_to 'guides', 'http://theodi.org/guides' %>, the ODI <%= link_to 'lecture archive', 'http://theodi.org/lunchtime-lectures' %> and our latest news and <%= link_to 'video content', 'http://vimeo.com/theodiuk' %>.</p>
 
-<p>Please do get in touch by emailing <%= link_to 'mailto:members@theodi.org', 'members@theodi.org' %> if you have any questions or suggestions.</p>
+<p>Your membership officially runs from <%= Date.today.to_formatted_s(:long_ordinal) %> to <%= (Date.today + 12.months).to_formatted_s(:long_ordinal) %>. Your contract is attached to this email. We’ll get in touch one month before your membership is due for renewal, and your membership will auto-renew unless you let us know otherwise. We hope that you will enjoy being an ODI Supporter and that you’ll stay a part of our global network for the years to come.</p>
+
+<p>If you have any questions or suggestions, please do get in touch by emailing <%= link_to 'mailto:members@theodi.org', 'members@theodi.org' %>.</p>
 
 <p>Best wishes,<br />
+<br />
 Georgia, Carl, Andrea, Clara and Patrik<br />
 The ODI Membership team</p>
