Fix link in email

--- a/app/views/devise_mailer/_individual_confirmation.html.erb
+++ b/app/views/devise_mailer/_individual_confirmation.html.erb
@@ -36,7 +36,7 @@
 
 <p>Your membership officially runs from <%= Date.today.to_formatted_s(:long_ordinal) %> to <%= (Date.today + 12.months).to_formatted_s(:long_ordinal) %>. Your contract is attached to this email. We’ll get in touch one month before your membership is due for renewal, and your membership will auto-renew unless you let us know otherwise. We hope that you will enjoy being an ODI Supporter and that you’ll stay a part of our global network for the years to come.</p>
 
-<p>If you have any questions or suggestions, please do get in touch by emailing <%= link_to 'mailto:members@theodi.org', 'members@theodi.org' %>.</p>
+<p>If you have any questions or suggestions, please do get in touch by emailing <%= link_to 'members@theodi.org', 'mailto:members@theodi.org' %>.</p>
 
 <p>Best wishes,<br />
 <br />
