--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -99,7 +99,7 @@
     <%= f.submit (individual? ? "Pay now" : "Become an ODI member"), :id => 'submit', :class => 'btn btn-primary btn-large' %>
     </p>
     <% if individual? %>
-      <p>You have the <%= link_to 'right to cancel', right_to_cancel_members_path %> anytime.</p>
+      <p>You have the <%= link_to 'right to cancel', right_to_cancel_members_path %> within the first 14 days of your membership.</p>
     <% end %>
   </div>
 
