--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,7 +35,12 @@
 
   	<h2>Terms and conditions</h2>
 
-  	<p>Please read the terms and conditions below and tick to say you accept them. As an open organisation we publish who funds us and what our relationships are. As part of this agreement you are agreeing that we can publish your membership and our contract.</p>
+  	<p>
+      Please read the terms and conditions below and tick to say you accept them. 
+      <% unless individual? %>
+        As an open organisation we publish who funds us and what our relationships are. As part of this agreement you are agreeing that we can publish your membership and our contract.
+      <% end %>
+    </p>
 
 <div id="terms" class="well">
   <% if individual? %>
